# Cpp-personal-projects

./: README.md
FileManager/: fileManager  fileManager.cpp
FitnessTracker/: CMakeLists.txt  forsen.db3  main.cpp
NetworkingInC++/: test.cpp
Soicopost/: soicopost  soicopost.cpp
SolarSystemSim/: CMakeLists.txt  solarSystemSim.cpp
